# no-time-to-train

./: .gitignore  DINOV3_CHANGELOG.md  DINOV3_IMPLEMENTATION_SUMMARY.md  DINOV3_INTEGRATION.md  DINOV3_QUICKSTART.md  QUICKSTART_SETUP.md  README.md  SETUP.md  few_shot_full_pipeline.sh  get_olive_classes.py  inspect_cocoeval.py  install.sh  pyproject.toml  quick_setup.sh  quick_setup_server.sh  requirements-minimal.txt  requirements.txt  run_lightning.py  run_pipeline_1000.sh  sam3-fsl.ipynb  visualize_olive.ipynb
no_time_to_train/dataset/: coco_ref_dataset.py  download_dataset.py  few_shot_sampling.py  metainfo.py  rename_olive_files.py  sample_sub_dataset.py
no_time_to_train/models/: Sam2Matcher.py  Sam2MatchingBaseline.py  Sam2MatchingBaseline_noAMG DINOv3.py  Sam2MatchingBaseline_noAMG.py  __init__.py  dinov3_utils.py  matching_baseline_utils.py  model_utils.py
no_time_to_train/new_exps/: coco_allclasses_10shot_Sam2L_dinov3_large.yaml  coco_fewshot_10shot_Sam2L.yaml  coco_fewshot_10shot_Sam2L_dinov3_large.yaml  coco_fewshot_10shot_Sam2S.yaml  olive_fewshot.yaml  olive_fewshot_Sam2L.yaml  olive_fewshot_Sam2L_dinov3.yaml
no_time_to_train/pl_configs/: matching_baseline_dinov3_test.yaml
no_time_to_train/pl_wrapper/: sam2matcher_pl.py
notebooks/: compare_nttt_sam3_metrics.ipynb  eda_olive_diseases.ipynb  sam2 vs sam3.ipynb  sam3_playground.ipynb  visualization.ipynb  visualize_grid_points.ipynb  visualize_olive.ipynb
scripts/: aggregate_nttt_sam3_metrics.py  cdfsod_pipeline_only_visualisation.sh  download_olive_dataset.sh  eval_sam3_olive_dispersion.py  eval_sam3_video_olive.py  few_shot_coco_semantic_pipeline.sh  lvis_pipeline.sh  matching_cdfsod_pipeline.sh  merge_olive_datasets.py  olive_ablation.sh  olive_pipeline.sh  pascal_split.sh  run_nttt_eval.sh  run_nttt_sam3_eval.sh  run_sam3_eval.sh
scripts/config/: olive_eval.conf
