[project]
name = "no-time-to-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pytorch-lightning>=2.5.6",
    "scikit-learn>=1.7.2",
    "tidecv>=1.0.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
